--- a/scss/index.scss
+++ b/scss/index.scss
@@ -148,7 +148,7 @@ body {
   background-blend-mode: multiply;
   color: #f5f5f5;
   display: grid;
-  grid-template: "header header header" "main main main";
+  // grid-template: "header header header" "main main main";
 //   grid-row-gap: 1rem;
 //   grid-column-gap: 1rem;
   justify-content: center;
